# zellai

./: Cargo.toml  README.md  SCHEMA.md  YOYO.md  zellai-vision.md
.github/workflows/: grow.yml  hello.yml
.yoyo/: config.toml  journal.md  learnings.md
.yoyo/scripts/: format_issues.py  grow.sh
.yoyo/skills/grow/: SKILL.md
.yoyo/skills/research/: SKILL.md
docs/: screenshot.py
hooks/: on-notification.sh  on-post-tool-use.sh  on-stop.sh
session_plan/: assessment.md  eval_task_1.md  eval_task_2.md  issue_responses.md  task_01.md  task_02.md  task_03.md
src/: attention.rs  config.rs  lib.rs  sidebar.rs  status.rs  status_bar.rs  status_bridge.rs  task_board.rs  teams.rs  workspace.rs
