[package]
name = "zellai"
version = "0.1.0"
edition = "2024"
authors = ["zellai contributors"]
description = "A Zellij plugin for managing AI coding agents"
license = "MIT"

[lib]
# cdylib for the Zellij WASM plugin; rlib so the native CLI binary can link the library
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "zellai-cli"
path = "src/bin/zellai/main.rs"

[dependencies]
zellij-tile = "0.44.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4"

[dev-dependencies]
serde_json = "1.0"
